autotests/syntax-tests-simple-refal/tests/negative/negative146.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var > Name Name ) Name , : = : = ; = ; } Name
: { } : , : = : = ; = ; } ; 